<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="MAIN_STR_TO_SUB" Id="{544550c6-6563-4160-a30f-7a4400bc0ca4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION MAIN_STR_TO_SUB : INT

VAR_INPUT

END_VAR


VAR_IN_OUT
	RGP : SYSTEM;
	HMIS : MAIN_P_7;
END_VAR

VAR
	i:INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[	//Heartbeat: BOOL:=0;

//HMIS.RGP_PROG_Program_Location:=RGP.PROG.Program_Location;
HMIS.RGP_PROG_HMI_ACTIVE_LOC:=RGP.PROG.HMI_ACTIVE_LOC;
//HMIS.RGP_PROG_HMI_FRMDATA_Heartbeat_Healthy:=RGP.PROG.HMI_FRMDATA_Heartbeat_Healthy;
//HMIS.RGP_PROG_HMI_FRMDATA2_Heartbeat_Healthy:=RGP.PROG.HMI_FRMDATA2_Heartbeat_Healthy;

	FOR i:=1 TO 100 BY 1 DO
		HMIS.RGP_PROG_ALARMS_STATE[i]:=RGP.PROG.ALARMS[i].STATE;
	END_FOR
	FOR i:=1 TO 200 BY 1 DO
		HMIS.RGP_PROG_WARNING_STATE[i]:=RGP.PROG.Warning[i].STATE;
	END_FOR

HMIS.RGP_PROG_HMI_OPS_LAST_SCREEN:=RGP.PROG.HMI_OPS_LAST_SCREEN;
	
HMIS.RGP_PROG_HMI_NRHMI_Heartbeat_Healthy:=RGP.PROG.HMI_NRHMI_Heartbeat_Healthy;
HMIS.RGP_PROG_P12_JSFL_SPEED:=RGP.PROG.P12_JSFL_SPEED;
HMIS.RGP_PROG_TOOL_POS_EN:=RGP.PROG.TOOL_POS_EN;
HMIS.RGP_PROG_T1_POS_EN:=RGP.PROG.T1_POS_EN;
HMIS.RGP_PROG_TOOL_NEG_EN:=RGP.PROG.TOOL_NEG_EN;
HMIS.RGP_PROG_T1_NEG_EN:=RGP.PROG.T1_NEG_EN;
HMIS.RGP_PROG_P12_JSL_SPEED:=RGP.PROG.P12_JSL_SPEED;
HMIS.RGP_PROG_CART_POS_EN:=RGP.PROG.CART_POS_EN;
HMIS.RGP_PROG_MANT_NEG_EN:=RGP.PROG.MANT_NEG_EN;
HMIS.RGP_PROG_BOOM_POS_EN:=RGP.PROG.BOOM_POS_EN;
HMIS.RGP_PROG_CART_NEG_EN:=RGP.PROG.CART_NEG_EN;
HMIS.RGP_PROG_MANT_POS_EN:=RGP.PROG.MANT_POS_EN;
HMIS.RGP_PROG_BOOM_NEG_EN:=RGP.PROG.BOOM_NEG_EN;
HMIS.RGP_PROG_SHP_POS_EN:=RGP.PROG.SHP_POS_EN;
HMIS.RGP_PROG_SHR_POS_EN:=RGP.PROG.SHR_POS_EN;
HMIS.RGP_PROG_EL1_POS_EN:=RGP.PROG.EL1_POS_EN;
HMIS.RGP_PROG_EL2_POS_EN:=RGP.PROG.EL2_POS_EN;
HMIS.RGP_PROG_SHP_NEG_EN:=RGP.PROG.SHP_NEG_EN;
HMIS.RGP_PROG_SHR_NEG_EN:=RGP.PROG.SHR_NEG_EN;
HMIS.RGP_PROG_EL1_NEG_EN:=RGP.PROG.EL1_NEG_EN;
HMIS.RGP_PROG_EL2_NEG_EN:=RGP.PROG.EL2_NEG_EN;
HMIS.RGP_PROG_P12_JSR_SPEED:=RGP.PROG.P12_JSR_SPEED;
HMIS.RGP_PROG_WRP_POS_EN:=RGP.PROG.WRP_POS_EN;
HMIS.RGP_PROG_WRR_POS_EN:=RGP.PROG.WRR_POS_EN;
HMIS.RGP_PROG_WRY_POS_EN:=RGP.PROG.WRY_POS_EN;
HMIS.RGP_PROG_WRP_NEG_EN:=RGP.PROG.WRP_NEG_EN;
HMIS.RGP_PROG_WRR_NEG_EN:=RGP.PROG.WRR_NEG_EN;
HMIS.RGP_PROG_WRY_NEG_EN:=RGP.PROG.WRY_NEG_EN;
HMIS.RGP_PROG_Alarm_Present:=RGP.PROG.Alarm_Present;
HMIS.RGP_PROG_P12_Elbow_Mode:=RGP.PROG.P12_Elbow_Mode;
HMIS.RGP_PROG_P12_Tool_Grip_Unlock:=RGP.PROG.P12_Tool_Grip_Unlock;
HMIS.RGP_PROG_HMI_FORCE_SENSOR_BASELINE_ACTIVE:=RGP.PROG.HMI_FORCE_SENSOR_BASELINE_ACTIVE;
HMIS.RGP_PROG_P12_Manip_Mode:=RGP.PROG.P12_Manip_Mode;
HMIS.RGP_PROG_MAN_FORCE_SENSOR_MONITOR_FX_Value:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.FX.Value;
HMIS.RGP_PROG_HMI_FORCE_SENSOR_BASELINE:=RGP.PROG.HMI_FORCE_SENSOR_BASELINE;
HMIS.RGP_PROG_MAN_FORCE_SENSOR_MONITOR_FY_Value:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.FY.Value;
HMIS.RGP_PROG_MAN_FORCE_SENSOR_MONITOR_FZ_Value:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.FZ.Value;
HMIS.RGP_PROG_MAN_FORCE_SENSOR_MONITOR_MX_Value:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.MX.Value;
HMIS.RGP_PROG_MAN_FORCE_SENSOR_MONITOR_MY_Value:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.MY.Value;
HMIS.RGP_PROG_MAN_FORCE_SENSOR_MONITOR_MZ_Value:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.MZ.Value;
HMIS.RGP_PROG_MAN_FORCE_SENSOR_MONITOR_Force_Mag:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.Force_Mag;
HMIS.RGP_PROG_P53_STATE:=RGP.PROG.P53_STATE;
HMIS.RGP_PROG_SHR_SPEED:=RGP.PROG.SHR_SPEED;
HMIS.RGP_PROG_P53_CLOSED_LOOP_EN:=RGP.PROG.P53_CLOSED_LOOP_EN;
HMIS.RGP_PROG_SHP_SPEED:=RGP.PROG.SHP_SPEED;
HMIS.RGP_PROG_EL1_SPEED:=RGP.PROG.EL1_SPEED;
HMIS.RGP_PROG_EL2_SPEED:=RGP.PROG.EL2_SPEED;
HMIS.RGP_PROG_WRP_SPEED:=RGP.PROG.WRP_SPEED;
HMIS.RGP_PROG_WRY_SPEED:=RGP.PROG.WRY_SPEED;
HMIS.RGP_PROG_WRR_SPEED:=RGP.PROG.WRR_SPEED;
HMIS.RGP_PROG_T1_SPEED:=RGP.PROG.T1_SPEED;
HMIS.RGP_PROG_MAN_TOOL_CHANGER_CONTROL_RUN_ACTIVE:=RGP.PROG.MAN_TOOL_CHANGER_CONTROL.RUN_ACTIVE;
HMIS.RGP_PROG_TOOL_SPEED:=RGP.PROG.TOOL_SPEED;
HMIS.RGP_PROG_CART_SPEED:=RGP.PROG.CART_SPEED;
HMIS.RGP_PROG_CARTL_POS_EN:=RGP.PROG.CARTL_POS_EN;
HMIS.RGP_PROG_CARTL_NEG_EN:=RGP.PROG.CARTL_NEG_EN;
HMIS.RGP_PROG_MANT_SPEED:=RGP.PROG.MANT_SPEED;
HMIS.RGP_PROG_BOOM_SPEED:=RGP.PROG.BOOM_SPEED;
HMIS.RGP_PROG_HPU_WARN_LEVEL:=RGP.PROG.HPU_WARN_LEVEL;
HMIS.RGP_PROG_FORCE_SENSOR_MONITOR_FX_Offset:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.FX.Offset;
HMIS.RGP_PROG_FORCE_SENSOR_MONITOR_FY_Offset:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.FY.Offset;
HMIS.RGP_PROG_FORCE_SENSOR_MONITOR_FZ_Offset:=RGP.PROG.MAN_FORCE_SENSOR_MONITOR.FZ.Offset;
HMIS.RGP_PROG_HPU_OVERRIDE :=RGP.PROG.HPU_OVERRIDE;

HMIS.RGP_EN1000_DV1051_SMR :=RGP.EN1000.DV1051_SMR;
HMIS.RGP_EN1000_DV1044_PHASE_MONITOR :=RGP.EN1000.DV1044_PHASE_MONITOR;
HMIS.RGP_EN1000_DV1235_HPU_PRESSURE_Value:=RGP.EN1000.DV1235_HPU_PRESSURE.Value;
HMIS.RGP_EN1000_CR1222_PRESSURE_ENABLE:=RGP.EN1000.CR1222_PRESSURE_ENABLE;
HMIS.RGP_EN1000_CR1202_HPU_PUMP_ON:=RGP.EN1000.CR1202_HPU_PUMP_ON;
HMIS.RGP_EN1000_DV1228_HPU_FLUID_TEMP_Value:=RGP.EN1000.DV1228_HPU_FLUID_TEMP.Value;
HMIS.RGP_EN1000_DV1228_HPU_FLUID_LEVEL_Value:=RGP.EN1000.DV1228_HPU_FLUID_LEVEL.Value;
HMIS.RGP_EN1000_CR1211_HPU_FAN_ON:=RGP.EN1000.CR1211_HPU_FAN_ON;
HMIS.RGP_EN1000_DV1394_AIR_PRESSURE_Value:=RGP.EN1000.DV1394_AIR_PRESSURE.Value;
HMIS.RGP_EN1000_VAL1003_SAFETY_VALVE:=RGP.EN1000.VAL1003_SAFETY_VALVE;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_OUT_Analog_Value:=RGP.EN1000.DR1401_CART_DRIVE.OUT_Analog.Value;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_OUT_Enable :=RGP.EN1000.DR1401_CART_DRIVE.OUT_Enable;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_OUT_Analog_Value:=RGP.EN1000.RIO1106_MANIP_TILT.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_OUT_Enable:=RGP.EN1000.RIO1106_MANIP_TILT.OUT_Enable;
HMIS.RGP_EN1000_RIO1108_BOOM_EXTEND_OUT_Analog_Value:=RGP.EN1000.RIO1108_BOOM_EXTEND.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1108_BOOM_EXTEND_OUT_Enable:=RGP.EN1000.RIO1108_BOOM_EXTEND.OUT_Enable;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_OUT_Analog_Value:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_OUT_Enable:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.OUT_Enable;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_Feedback_Position:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.Feedback.Position;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_OUT_Analog_Value:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_OUT_Enable:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.OUT_Enable;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_Feedback_Position:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.Feedback.Position;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_OUT_Analog_Value:=RGP.EN1000.RIO1116_ELBOW_1.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_OUT_Enable:=RGP.EN1000.RIO1116_ELBOW_1.OUT_Enable;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_Feedback_Position:=RGP.EN1000.RIO1116_ELBOW_1.Feedback.Position;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1116_ELBOW_1.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1116_ELBOW_1.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_OUT_Analog_Value:=RGP.EN1000.RIO1118_ELBOW_2.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_OUT_Enable:=RGP.EN1000.RIO1118_ELBOW_2.OUT_Enable;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_Feedback_Position:=RGP.EN1000.RIO1118_ELBOW_2.Feedback.Position;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1118_ELBOW_2.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1118_ELBOW_2.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_OUT_Analog_Value:=RGP.EN1000.RIO1120_WRIST_PITCH.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_OUT_Enable:=RGP.EN1000.RIO1120_WRIST_PITCH.OUT_Enable;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_Feedback_Position:=RGP.EN1000.RIO1120_WRIST_PITCH.Feedback.Position;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1120_WRIST_PITCH.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1120_WRIST_PITCH.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_OUT_Analog_Value:=RGP.EN1000.RIO1126_WRIST_YAW.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_OUT_Enable:=RGP.EN1000.RIO1126_WRIST_YAW.OUT_Enable;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_Feedback_Position:=RGP.EN1000.RIO1126_WRIST_YAW.Feedback.Position;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1126_WRIST_YAW.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1126_WRIST_YAW.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_OUT_Analog_Value:=RGP.EN1000.RIO1128_WRIST_ROLL.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_OUT_Enable:=RGP.EN1000.RIO1128_WRIST_ROLL.OUT_Enable;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_Feedback_Position:=RGP.EN1000.RIO1128_WRIST_ROLL.Feedback.Position;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1128_WRIST_ROLL.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1128_WRIST_ROLL.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_CR1365_TOOL_CHANGER_DISENGAGE:=RGP.EN1000.CR1365_TOOL_CHANGER_DISENGAGE;
HMIS.RGP_EN1000_RIO1130_TOOL_AXIS_1_OUT_Analog_Value:=RGP.EN1000.RIO1130_TOOL_AXIS_1.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1130_TOOL_AXIS_1_OUT_Enable:=RGP.EN1000.RIO1130_TOOL_AXIS_1.OUT_Enable;
HMIS.RGP_EN1000_CR1360_TOOL_AXIS_2_A:=RGP.EN1000.CR1360_TOOL_AXIS_2_A;
HMIS.RGP_EN1000_CR1364_TOOL_AXIS_2_B:=RGP.EN1000.CR1364_TOOL_AXIS_2_B;
HMIS.RGP_EN1000_RIO1121_TOOL_MOT_OUT_Analog_Value:=RGP.EN1000.RIO1121_TOOL_MOT.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1121_TOOL_MOT_OUT_Enable:=RGP.EN1000.RIO1121_TOOL_MOT.OUT_Enable;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_CL_RUN_Pos_del:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.CL_RUN_Pos_del;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_Max_Following_Position_Error:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_CL_RUN_Pos_del:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.CL_RUN_Pos_del;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_Max_Following_Position_Error:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_CL_RUN_Pos_del:=RGP.EN1000.RIO1116_ELBOW_1.CL_RUN_Pos_del;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_Max_Following_Position_Error:=RGP.EN1000.RIO1116_ELBOW_1.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_CL_RUN_Pos_del:=RGP.EN1000.RIO1118_ELBOW_2.CL_RUN_Pos_del;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_Max_Following_Position_Error:=RGP.EN1000.RIO1118_ELBOW_2.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_CL_RUN_Pos_del:=RGP.EN1000.RIO1120_WRIST_PITCH.CL_RUN_Pos_del;

HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_Max_Following_Position_Error:=RGP.EN1000.RIO1120_WRIST_PITCH.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_CL_RUN_Pos_del:=RGP.EN1000.RIO1126_WRIST_YAW.CL_RUN_Pos_del;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_Max_Following_Position_Error:=RGP.EN1000.RIO1126_WRIST_YAW.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_CL_RUN_Pos_del:=RGP.EN1000.RIO1128_WRIST_ROLL.CL_RUN_Pos_del;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_Max_Following_Position_Error:=RGP.EN1000.RIO1128_WRIST_ROLL.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_IN_Drive_Error:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_Feedback_Velocity:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_Feedback_Raw_Data :=RGP.EN1000.RIO1132A_SHOULDER_ROLL.Feedback.Raw_Data;
HMIS.RGP_EN1000_RIO1132A_SHOULDER_ROLL_Feedback_Calibration_Position:=RGP.EN1000.RIO1132A_SHOULDER_ROLL.Feedback.Calibration_Position;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_IN_Drive_Error:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_Feedback_Velocity:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_Feedback_Raw_Data :=RGP.EN1000.RIO1110_SHOULDER_PIVOT.Feedback.Raw_Data;
HMIS.RGP_EN1000_RIO1110_SHOULDER_PIVOT_Feedback_Calibration_Position:=RGP.EN1000.RIO1110_SHOULDER_PIVOT.Feedback.Calibration_Position;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_IN_Drive_Error:=RGP.EN1000.RIO1116_ELBOW_1.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_Feedback_Velocity:=RGP.EN1000.RIO1116_ELBOW_1.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_Feedback_Raw_Data :=RGP.EN1000.RIO1116_ELBOW_1.Feedback.Raw_Data;
HMIS.RGP_EN1000_RIO1116_ELBOW_1_Feedback_Calibration_Position:=RGP.EN1000.RIO1116_ELBOW_1.Feedback.Calibration_Position;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_IN_Drive_Error:=RGP.EN1000.RIO1118_ELBOW_2.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_Feedback_Velocity:=RGP.EN1000.RIO1118_ELBOW_2.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_Feedback_Raw_Data :=RGP.EN1000.RIO1118_ELBOW_2.Feedback.Raw_Data ;
HMIS.RGP_EN1000_RIO1118_ELBOW_2_Feedback_Calibration_Position:=RGP.EN1000.RIO1118_ELBOW_2.Feedback.Calibration_Position;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_IN_Drive_Error:=RGP.EN1000.RIO1120_WRIST_PITCH.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_Feedback_Velocity:=RGP.EN1000.RIO1120_WRIST_PITCH.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_Feedback_Raw_Data :=RGP.EN1000.RIO1120_WRIST_PITCH.Feedback.Raw_Data;
HMIS.RGP_EN1000_RIO1120_WRIST_PITCH_Feedback_Calibration_Position:=RGP.EN1000.RIO1120_WRIST_PITCH.Feedback.Calibration_Position;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_IN_Drive_Error:=RGP.EN1000.RIO1126_WRIST_YAW.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_Feedback_Velocity:=RGP.EN1000.RIO1126_WRIST_YAW.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_Feedback_Raw_Data :=RGP.EN1000.RIO1126_WRIST_YAW.Feedback.Raw_Data;
HMIS.RGP_EN1000_RIO1126_WRIST_YAW_Feedback_Calibration_Position:=RGP.EN1000.RIO1126_WRIST_YAW.Feedback.Calibration_Position;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_IN_Drive_Error:=RGP.EN1000.RIO1128_WRIST_ROLL.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_Feedback_Velocity:=RGP.EN1000.RIO1128_WRIST_ROLL.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_Feedback_Raw_Data :=RGP.EN1000.RIO1128_WRIST_ROLL.Feedback.Raw_Data;
HMIS.RGP_EN1000_RIO1128_WRIST_ROLL_Feedback_Calibration_Position:=RGP.EN1000.RIO1128_WRIST_ROLL.Feedback.Calibration_Position;
HMIS.RGP_EN1000_RIO1130_TOOL_AXIS_1_IN_Drive_Error:=RGP.EN1000.RIO1130_TOOL_AXIS_1.IN_Drive_Error;
HMIS.RGP_EN1000_CR1368_TOOL_AXIS_1_DUMP:=RGP.EN1000.CR1368_TOOL_AXIS_1_DUMP;
HMIS.RGP_EN1000_CR1352_TOOL_AXIS_2_DUMP:=RGP.EN1000.CR1352_TOOL_AXIS_2_DUMP;
HMIS.RGP_EN1000_RIO1130_TOOL_AXIS_1_IN_Drive_Error:=RGP.EN1000.RIO1130_TOOL_AXIS_1.IN_Drive_Error;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_IN_Drive_Error:=RGP.EN1000.DR1401_CART_DRIVE.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_IN_Drive_Error:=RGP.EN1000.RIO1106_MANIP_TILT.IN_Drive_Error;
HMIS.RGP_EN1000_RIO1108_BOOM_EXTEND_IN_Drive_Error:=RGP.EN1000.RIO1108_BOOM_EXTEND.IN_Drive_Error;

HMIS.TS_IN_P02_USER_PASSWORD1:=RGP.EN1000.PLC1101_TS.P02_USER_PASSWORD[1];
HMIS.TS_IN_P02_USER_PASSWORD2:=RGP.EN1000.PLC1101_TS.P02_USER_PASSWORD[2];
HMIS.TS_IN_P02_USER_PASSWORD3:=RGP.EN1000.PLC1101_TS.P02_USER_PASSWORD[3];

HMIS.RGP_ACTIVE_HMI_AUDIBLE_ALARM_Value:=RGP.ACTIVE_HMI.AUDIBLE_ALARM.Value;
HMIS.RGP_PROG_AUTO_CART_ENG_DISEN:=RGP.PROG.AUTO_CART_ENG_DISEN;	
HMIS.RGP_EN1000_DR1401_CART_DRIVE_IN_EOT_POS:=RGP.EN1000.DR1401_CART_DRIVE.IN_EOT_POS;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_IN_EOT_NEG:=RGP.EN1000.DR1401_CART_DRIVE.IN_EOT_NEG;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_Feedback_Position:=RGP.EN1000.DR1401_CART_DRIVE.Feedback.Position;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_Feedback_Velocity:=RGP.EN1000.DR1401_CART_DRIVE.Feedback.Velocity;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_Feedback_Raw_Data:=RGP.EN1000.DR1401_CART_DRIVE.Feedback.Raw_Data;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_Feedback_Calibration_Position:=RGP.EN1000.DR1401_CART_DRIVE.Feedback.Calibration_Position;

HMIS.RGP_PROG_FC_OVERRIDE:=RGP.PROG.FC_OVERRIDE;
HMIS.RGP_PROG_P12_Boom_Mode:=RGP.PROG.P12_Boom_Mode;
HMIS.RGP_PROG_P53_Boom_Mode:=RGP.PROG.P53_Boom_Mode;
HMIS.RGP_EN1000_CR1432_HOIST_RAISE:=RGP.EN1000.CR1432_HOIST_RAISE;
HMIS.RGP_EN1000_CR1434_HOIST_LOWER:=RGP.EN1000.CR1434_HOIST_LOWER;
HMIS.RGP_PROG_HOIST_POS_EN:=RGP.PROG.HOIST_POS_EN;
HMIS.RGP_PROG_HOIST_NEG_EN:=RGP.PROG.HOIST_NEG_EN;

HMIS.RGP_EN1000_PB1055_E_STOP_PB:=RGP.EN1000.PB1055_E_STOP_PB;
HMIS.RGP_PROG_TOOL_OVERRIDE :=RGP.PROG.TOOL_OVERRIDE;

HMIS.RGP_PROG_TOOL_ATTACHED := RGP.PROG.TOOL_ATTACHED;

HMIS.RGP_PROG_CART_SPEED_HILOW:=RGP.PROG.CART_SPEED_HILOW;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_Feedback_Position:=RGP.EN1000.RIO1106_MANIP_TILT.Feedback.Position;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_Feedback_Velocity:=RGP.EN1000.RIO1106_MANIP_TILT.Feedback.Velocity;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_Feedback_Raw_Data:=RGP.EN1000.RIO1106_MANIP_TILT.Feedback.Raw_Data;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_Feedback_Calibration_Position:=RGP.EN1000.RIO1106_MANIP_TILT.Feedback.Calibration_Position;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_CL_RUN_Pos_del:=RGP.EN1000.DR1401_CART_DRIVE.CL_RUN_Pos_del;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_Max_Following_Position_Error:=RGP.EN1000.DR1401_CART_DRIVE.Max_Following_Position_Error;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_IN_SOFT_EOT_POS:=RGP.EN1000.DR1401_CART_DRIVE.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_DR1401_CART_DRIVE_IN_SOFT_EOT_NEG:=RGP.EN1000.DR1401_CART_DRIVE.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_CL_RUN_Pos_del:=RGP.EN1000.RIO1106_MANIP_TILT.CL_RUN_Pos_del;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_Max_Following_Position_Error:=RGP.EN1000.RIO1106_MANIP_TILT.Max_Following_Position_Error;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_IN_SOFT_EOT_POS:=RGP.EN1000.RIO1106_MANIP_TILT.IN_SOFT_EOT_POS;
HMIS.RGP_EN1000_RIO1106_MANIP_TILT_IN_SOFT_EOT_NEG:=RGP.EN1000.RIO1106_MANIP_TILT.IN_SOFT_EOT_NEG;
HMIS.RGP_EN1000_RIO1134_BOOM_EXTEND2_OUT_Analog_Value:=RGP.EN1000.RIO1134_BOOM_EXTEND2.OUT_Analog.Value;
HMIS.RGP_EN1000_RIO1134_BOOM_EXTEND2_OUT_Enable:=RGP.EN1000.RIO1134_BOOM_EXTEND2.OUT_Enable;

HMIS.RGP_PROG_P12_Tool_Ops_Enable:=RGP.PROG.P12_Tool_Ops_Enable;
HMIS.RGP_PROG_P12_Manip_Tilt_Enable:=RGP.PROG.P12_Manip_Tilt_Enable;
]]></ST>
    </Implementation>
    <LineIds Name="MAIN_STR_TO_SUB">
      <LineId Id="877" Count="5" />
      <LineId Id="1069" Count="0" />
      <LineId Id="1071" Count="5" />
      <LineId Id="1070" Count="0" />
      <LineId Id="885" Count="60" />
      <LineId Id="953" Count="71" />
      <LineId Id="1077" Count="0" />
      <LineId Id="1025" Count="42" />
      <LineId Id="874" Count="0" />
      <LineId Id="1093" Count="0" />
      <LineId Id="1097" Count="7" />
      <LineId Id="1120" Count="0" />
      <LineId Id="1122" Count="6" />
      <LineId Id="1144" Count="2" />
      <LineId Id="1162" Count="18" />
      <LineId Id="1197" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>